--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,49 +1,28 @@
-name: Deploy React Book App from GitHub to AWS Elastic Beanstalk
+name: Deploy Frontend
 on:
-  # activates the workflow when there is a push on the main branch
   push:
     branches:
       - main
+
 jobs:
-  deploy:
-    runs-on: ubuntu-latest # the OS your job should run on
-    strategy:
-      matrix:
-        node-version: [16.x]
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout Latest Repo
-        # checks out your repository under the GitHub workspace so that your workflow can access it
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - run: docker build -t manvendra1097/react-test -f Dockerfile.dev .
+      - run: docker run -e CI=true manvendra1097/react-test npm test
 
-      - name: Generate Deployment Package
-        # zip all files except .git
-        run: zip -r reactapp.zip * -x "**.git**"
-
-      - name: Get timestamp
-        uses: gerred/actions/current-time@master
-        id: current-time
-
-      - name: Run string replace
-        uses: frabert/replace-string-action@master
-        id: format-time
-        with:
-          # replaces '[:\.]+' in the timestamp with '-'
-          pattern: '[:\.]+'
-          string: '${{ steps.current-time.outputs.time }}'
-          replace-with: '-'
-          flags: 'g'
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
 
       - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v21
+        uses: einaregilsson/beanstalk-deploy@v18
         with:
-          #  input the credentials you used to setup AWS CLI and credentials for the application environment
-          aws_access_key: '${{ secrets.ACCESS_KEY }}'
-          aws_secret_key: '${{ secrets.SECRET_ACCESS_KEY }}'
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: react-app
           environment_name: React-app-env
-          version_label: 'app-${{ steps.format-time.outputs.replaced }}'
           region: us-east-1
-          deployment_package: reactapp.zip
-
-      - name: Deployed!
-        run: echo App deployed to ELB
+          version_label: ${{ github.sha }}
+          deployment_package: deploy.zip
