--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,28 +1,29 @@
-name: Deploy Frontend
+name: Dev deployment from Github to AWS
 on:
   push:
     branches:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t manvendra1097/react-test -f Dockerfile.dev .
-      - run: docker run -e CI=true manvendra1097/react-test npm test
+      - name: Checkout Latest Repo
+        uses: actions/checkout@master
 
-      - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-      - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v18
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
-          aws_access_key: ${{ secrets.ACCESS_KEY }}
-          aws_secret_key: ${{ secrets.SECRET_ACCESS_KEY }}
-          application_name: webapp
-          environment_name: Webapp-env
-          region: us-east-1
-          version_label: ${{ github.sha }}
-          deployment_package: deploy.zip
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: Dockerfile.prod
+          push: true
+          tags: manvendra1097/react-app:latest
