--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,10 +20,17 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v2
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*
+
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v21
         with:
-          context: .
-          file: Dockerfile.prod
-          push: true
-          tags: manvendra1097/react-app:latest
+          aws_access_key: ${{ secrets.ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.SECRET_ACCESS_KEY }}
+          application_name: reactapp
+          environment_name: Reactapp-env
+          existing_bucket_name: elasticbeanstalk-us-east-1-363463926277
+          region: us-east-1
+          version_label: ${{ github.sha }}
+          deployment_package: deploy.zip
