--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,9 @@
-# docker-compose.prod.yml
-
 version: '3.8'
-
 services:
   frontend-prod:
     container_name: frontend-prod
     build:
       context: .
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile
     ports:
       - '80:80'
