--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,14 +23,12 @@ jobs:
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
 
-      - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v21
+  deploytoaws:
+    runs-on: aws-ec2
+
+    steps:
+      -name: Pull image from dockerhub
+       uses: docker/login-action@v1
         with:
-          aws_access_key: ${{ secrets.ACCESS_KEY }}
-          aws_secret_key: ${{ secrets.SECRET_ACCESS_KEY }}
-          application_name: reactapp
-          environment_name: Reactapp-env
-          existing_bucket_name: elasticbeanstalk-us-east-1-363463926277
-          region: us-east-1
-          version_label: ${{ github.sha }}
-          deployment_package: deploy.zip
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
